--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 .pirma  { padding-left: 30px;
     border: 2px solid green;
   }
+  .antra { margin-top: 20px;
+    margin-bottom: 0px;
+    border-bottom: 5px dotted red;
+  }
