--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@
     margin-bottom: 0px;
     border-bottom: 5px dotted red;
   }
+  .trecia { margin-top: 0px;
+    margin-left: 30px;
+    margin-right: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 17px;
+    padding-right: 17px;
+  }
