--- a/Penkta Box Model uzduotis/style.css
+++ b/Penkta Box Model uzduotis/style.css
@@ -1,5 +1,5 @@
 #pirmas { 
-    margin: 0px 500px 500px 600px;
+    margin: 0px 30% 500px 30%;
     background-color: rgb(231, 225, 188);
     border: solid 3px rgb(220, 154, 11);
     height: 600px;
